cmake_minimum_required(VERSION 3.17)
project(Coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding main.cpp coding/base/BiTree.h coding/base/LinkedList.h coding/class/Class2.h coding/base/BaseDefine.h coding/base/Sort.h coding/class/Class18.h coding/myCoding/FixTree.h coding/myCoding/LinkedListAdd.h coding/class/Class3.h coding/class/Class1.h coding/class/Class4.h coding/class/Class5.h)