cmake_minimum_required(VERSION 3.17)
project(Coding)

set(CMAKE_CXX_STANDARD 14)

add_executable(Coding main.cpp coding/base/BiTree.h coding/base/LinkedList.h coding/class/Class02.h coding/base/BaseDefine.h coding/base/Sort.h coding/class/Class18.h coding/myCoding/FixTree.h coding/myCoding/LinkedListAdd.h coding/class/Class03.h coding/class/Class01.h coding/class/Class04.h coding/class/Class05.h coding/class/Class06.h coding/class/Class07.h coding/code_for_offer/Class01.h)